--- a/game.css
+++ b/game.css
@@ -11,6 +11,7 @@ body {
  
 }
 .head-title {
+  background-image: url();
   text-align: center;
   font-family: 'Times New Roman', Times, serif;
   font-size: 2em;
@@ -23,7 +24,9 @@ body {
 .buttons-div {
   margin: 50;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   background-color: rgb(216, 216, 216);
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -33,14 +36,14 @@ body {
 
 button {
   background-color: rgb(105, 211, 122);
-  font-size: 1em;
+  font-size: 1.5em;
   font-weight: bold;
   border: none;
-  width: 100px;
+  width: 300px;
   padding: 1em 1.3em;
-    border-radius: 30px;
+  border-radius: 30px;
   text-align: center;
-  margin: 40px  25px;
+  margin: 25px  25px;
 }
 
 button:hover {
